# chronon

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.cursor/rules/: chronon-quality.mdc
.github/workflows/: ci.yml
.sentrux/: rules.toml
chronon/: Cargo.toml  README.md
chronon-axum/: Cargo.toml  README.md
chronon-axum/src/: dto.rs  handlers.rs  handlers_common.rs  lib.rs  state.rs
chronon-axum/tests/: router_smoke.rs
chronon-backend-mem/: Cargo.toml  README.md
chronon-backend-mem/src/: lib.rs  store_tests.rs
chronon-backend-mem/src/store/: claims.rs  coordinator.rs  jobs.rs  mod.rs  runs.rs  trait_impl.rs
chronon-backend-postgres/: Cargo.toml  README.md
chronon-backend-postgres/src/: bootstrap.rs  lib.rs
chronon-backend-redis/: Cargo.toml  README.md
chronon-backend-redis/src/: lib.rs  queue.rs
chronon-backend-redis/src/composite/: claim.rs  mod.rs
chronon-backend-sql-common/: Cargo.toml  README.md
chronon-backend-sql-common/src/: backend.rs  claims.rs  coordinator.rs  delegate.rs  error_map.rs  jobs.rs  lib.rs  macros.rs  runs.rs  schema.rs  store_impl.rs  store_smoke.rs
chronon-backend-sql-common/src/row/: job.rs  leader.rs  mod.rs  partition.rs  pool_key.rs  revision.rs  run.rs  script.rs  worker.rs
chronon-backend-sqlite/: Cargo.toml  README.md
chronon-backend-sqlite/src/: lib.rs
chronon-bench/: Cargo.toml  EXPERIMENTS.md  PERFORMANCE_STUDY.md  README.md
chronon-bench/scripts/: run-campaign-resume.sh  run-ch1-job-sweep.sh  run-ch7-d0-worker-sweep.sh  run-ch7-multibench-smoke.sh  run-ch7-multibench-sweep.sh  run-ch7-pool-sweep.sh  run-ch7-worker-sweep.sh  run-ch7d-fleet-sweep.sh  run-chl-sustain.sh  run-claim-ab.sh  run-durable-floor.sh  run-execution-path.sh  run-full-campaign.sh  run-partition-sweep.sh  run-prefill-sweep.sh  run-resilience.sh
chronon-bench/src/: config.rs  experiments.rs  lib.rs  main.rs  matrix.rs  pass_eval.rs  report.rs  stats.rs
chronon-bench/src/cli/: aggregate_cmd.rs  bench_config.rs  matrix_cmd.rs  mod.rs  run_cmd.rs  scaling_curve_cmd.rs
chronon-bench/src/projection/: ch1_jobs.rs  ch7_aggregate.rs  ch7_data.rs  ch7_multibench.rs  ch7_pools.rs  ch7_workers.rs  ch7d_fleet.rs  chl_sustain.rs  common.rs  mod.rs
chronon-bench/src/runners/: ch0_tick.rs  ch1_query.rs  ch2_cron.rs  ch3_partition.rs  ch4_leader.rs  ch5_script.rs  ch6_deploy.rs  ch7_claim.rs  ch7_common.rs  ch7_daemon.rs  chl_load.rs  mod.rs
chronon-bench/tests/: multibench_concurrent_drain.rs  multibench_smoke.rs  projection_smoke.rs  runner_smoke.rs
chronon-core/: Cargo.toml  README.md
chronon-core/src/: context.rs  error.rs  handle.rs  lib.rs  router.rs  store.rs  unit_tests.rs
chronon-core/src/models/: job.rs  lease.rs  mod.rs  partition_assignment.rs  revision.rs  run.rs  scheduler_leader.rs  script.rs  worker.rs
chronon-e2e/: Cargo.toml  README.md
chronon-e2e/tests/: distributed_smoke.rs  matrix_smoke.rs  multibench_dual_drain.rs  scenarios.rs
chronon-executor/: Cargo.toml  README.md
chronon-executor/src/: descriptor.rs  invoke.rs  lib.rs  registry.rs
chronon-macros/: Cargo.toml  README.md
chronon-macros/src/: lib.rs  script.rs  script_attrs.rs  script_expand.rs  script_validate.rs
chronon-runtime/: Cargo.toml  README.md
chronon-runtime/src/: builder.rs  coordinator.rs  coordinator_service.rs  embedded.rs  env.rs  events.rs  lib.rs  remote_client.rs  retry.rs  runtime.rs  worker.rs
chronon-scheduler/: Cargo.toml  README.md
chronon-scheduler/src/: cron.rs  env.rs  leader.rs  lib.rs  partition_assigner.rs  partitioning.rs  tick.rs  tick_loop.rs
chronon-scheduler/tests/: leader_integration.rs
chronon-telemetry/: Cargo.toml  README.md
chronon-telemetry/src/: console.rs  lib.rs  recording.rs
chronon-testkit/: Cargo.toml  README.md
chronon-testkit/src/: catalog.rs  distributed.rs  fixtures.rs  lib.rs  macros.rs  matrix.rs  runner.rs  runner_steps.rs  runner_types.rs  scenario.rs  shared_store.rs  store_contract.rs
chronon-testkit/src/bootstrap/: embedded.rs  mod.rs  multibench_store.rs  session.rs  split.rs
chronon-testkit/tests/: store_contracts.rs
chronon/examples/: axum_host.rs  coordinator_daemon.rs  embedded_tick.rs  postgres_boot.rs  postgres_redis_boot.rs  run_now.rs  script_handle_job.rs  script_macro.rs  sqlite_boot.rs  store_router_boot.rs  worker_daemon.rs
chronon/src/: lib.rs
docs/: VERIFICATION.md
infra/aws/chronon/: README.md  deploy-and-run-e2e.sh  docker-compose.data.yml  provision.md  run-distributed-smoke.sh  run-e2e-aws.sh  run-remote-ci-inner.sh  run-remote-ci.sh  teardown.md
profiling/chronon-bench/reports/: bm-ch0-postgres-embedded-isolated-lab-off-aws-t3-medium.json  bm-ch0-postgres-redis-embedded-isolated-lab-off-aws-t3-medium.json  bm-ch0-sqlite-embedded-isolated-lab-off-aws-t3-medium.json  bm-ch1-mem-j1000-aws-t3-medium.json  bm-ch1-mem-j10000-aws-t3-medium.json  bm-ch1-mem-j100000-aws-t3-medium.json  bm-ch1-mem-p16-aws-t3-medium.json  bm-ch1-mem-p4-aws-t3-medium.json  bm-ch1-mem-p64-aws-t3-medium.json  bm-ch1-postgres-embedded-isolated-lab-off-aws-t3-medium.json  bm-ch1-postgres-j1000-aws-t3-medium.json  bm-ch1-postgres-j10000-aws-t3-medium.json  bm-ch1-postgres-j100000-aws-t3-medium.json  bm-ch1-postgres-p16-aws-t3-medium.json  bm-ch1-postgres-p4-aws-t3-medium.json  bm-ch1-postgres-p64-aws-t3-medium.json  bm-ch1-postgres-redis-embedded-isolated-lab-off-aws-t3-medium.json  bm-ch1-postgres-redis-j1000-aws-t3-medium.json  bm-ch1-postgres-redis-j10000-aws-t3-medium.json  bm-ch1-postgres-redis-j100000-aws-t3-medium.json  bm-ch1-postgres-redis-p16-aws-t3-medium.json  bm-ch1-postgres-redis-p4-aws-t3-medium.json  bm-ch1-postgres-redis-p64-aws-t3-medium.json  bm-ch1-sqlite-embedded-isolated-lab-off-aws-t3-medium.json  bm-ch1-sqlite-j1000-aws-t3-medium.json  bm-ch1-sqlite-j10000-aws-t3-medium.json  bm-ch1-sqlite-j100000-aws-t3-medium.json  bm-ch1-sqlite-p16-aws-t3-medium.json  bm-ch1-sqlite-p4-aws-t3-medium.json  bm-ch1-sqlite-p64-aws-t3-medium.json  bm-ch3-postgres-embedded-isolated-lab-off-aws-t3-medium.json  (+202 more)
scripts/: coverage.sh
(+38 files in other folders)
