[package]
name = "chronon-axum"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP API routes for Chronon"

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
chronon-core = { workspace = true }
chronon-executor = { workspace = true }
chronon-runtime = { workspace = true }
chronon-scheduler = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
chronon-backend-mem = { workspace = true }
chronon-telemetry = { workspace = true }
http-body-util = "0.1"
tower = { workspace = true }
