[package]
name = "chronon-backend-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "PostgreSQL SchedulerStore adapter for Chronon"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = { workspace = true }
chronon-backend-sql-common = { workspace = true }
chronon-core = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }

[package.metadata.cargo-machete]
ignored = ["async-trait", "chrono"]

[lints]
workspace = true
