[package]
name = "chronon-backend-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Redis-backed run queue with SQL SchedulerStore for Chronon"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
chronon-backend-postgres = { workspace = true }
chronon-backend-sql-common = { workspace = true }
chronon-core = { workspace = true }
redis = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
# Used in crate docs / doctests (Postgres + Redis boot example).
ignored = ["chronon-backend-postgres"]

[lints]
workspace = true
