[package]
name = "chronon-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration tests for Chronon matrix scenarios"
publish = false

[lints]
workspace = true

[dev-dependencies]
chronon-bench = { workspace = true }
chronon-testkit = { workspace = true }
chronon-backend-postgres = { workspace = true }
chronon-backend-redis = { workspace = true }
chronon-core = { workspace = true }
chronon-scheduler = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process"] }
uuid = { workspace = true }
