[package]
name = "chronon-executor"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Script registry and invocation for Chronon"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
chronon-core = { workspace = true }
chronon-telemetry = { workspace = true }
quark = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
