[package]
name = "chronon-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Chronon runtime assembly and ChrononBuilder"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
chronon-core = { workspace = true }
chronon-executor = { workspace = true }
chronon-scheduler = { workspace = true }
chronon-telemetry = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chronon-backend-mem = { workspace = true }
