[package]
name = "chronon-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "TelemetrySink trait and console/no-op adapters for Chronon"

[lints]
workspace = true

[dependencies]
parking_lot = { workspace = true }
tracing = { workspace = true }
