[package]
name = "chronon-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Matrix bootstrap and scenarios for Chronon e2e and bench"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
chronon-backend-mem = { workspace = true }
chronon-backend-postgres = { workspace = true }
chronon-backend-redis = { workspace = true }
chronon-backend-sqlite = { workspace = true }
chronon-core = { workspace = true }
chronon-executor = { workspace = true }
chronon-runtime = { workspace = true }
chronon-scheduler = { workspace = true }
chronon-telemetry = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
paste = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
